# sept

./: .gitignore  CMakeLists.txt  README.md  sept-config.cmake  sept.kdev4
doc/: notes.txt
lib/sept/: ArrayTerm.cpp  ArrayTerm.hpp  ArrayType.cpp  ArrayType.hpp  BaseArrayT_t.cpp  BaseArrayT_t.hpp  BaseArray_S_t.cpp  BaseArray_S_t.hpp  BaseArray_t.cpp  BaseArray_t.hpp  Data.cpp  Data.hpp  DataArray_t.hpp  DataPrintCtx.hpp  DataVector.cpp  DataVector.hpp  Data_t.hpp  FormalTypeOf.cpp  FormalTypeOf.hpp  FreeVar.cpp  FreeVar.hpp  GlobalSymRef.cpp  GlobalSymRef.hpp  LocalSymRef.cpp  LocalSymRef.hpp  MemRef.cpp  MemRef.hpp  NPTerm.cpp  NPTerm.hpp  NPType.cpp  NPType.hpp  OrderedMapTerm.cpp  OrderedMapTerm.hpp  OrderedMapType.cpp  OrderedMapType.hpp  Placeholder.cpp  Placeholder.hpp  Projection.hpp  Ref.cpp  Ref.hpp  (+26 more)
lib/sept/ctl/: ClearOutput.cpp  ClearOutput.hpp  EndOfFile.cpp  EndOfFile.hpp  Output.cpp  Output.hpp  RequestSyncInput.cpp  RequestSyncInput.hpp
lib/sept/proj/: ElementExtraction.cpp  ElementExtraction.hpp  TypeFunctor.cpp  TypeFunctor.hpp
lib/sept/type/: Conversion.cpp  Conversion.hpp  Conversions.cpp  Conversions.hpp
